# robotframework-gherkin-parser

./: .vscodeignore  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  bundled_requirements.txt  cliff.toml  hatch.toml  package-lock.json  package.json  pyproject.toml
examples/simple/: .gitignore  robot.toml
examples/simple/features/: Bladerunner.feature  Minimal.feature  __init__.robot  doc_strings.feature  documentation.feature  rule_sample.feature  simple.feature.md
examples/simple/features/steps/: __init__.resource  hooks.resource  simple.resource  step_impls.py
examples/simple/tests/: first.robot
scripts/: install_packages.py  package.py  publish.py  update_doc_links.py  update_git_versions.py
src/GherkinParser/: Library.py  __init__.py  __version__.py  gherkin_builder.py  gherkin_parser.py
tests/gurke/: test_gherkin.py  test_gherkin_in_markdown_token_matcher.py
vscode-client/: extension.ts  formattingEditProvider.ts  parseGherkinDocument.ts
